6997311: SIGFPE in new long division asm code

Use unsigned DIV instruction

Reviewed-by: never